Fix page layout

--- a/_posts/contents_01_java/2024-10-04-Java_01.md
+++ b/_posts/contents_01_java/2024-10-04-Java_01.md
@@ -1,11 +1,9 @@
 ---
 layout: post
 title: "Java_01_자바와 객체 지향"
-date: 2024-10-03
+date: 2024-10-04
 categories: blog
 ---
-
-[이전 글]({{ site.baseurl }}{{ page.previous.url }})&emsp;[다음 글]({{ site.baseurl }}{{ page.next.url }})    
 
 <br>
 
@@ -158,6 +156,6 @@ categories: blog
 이 경우 부모가 구체적인 기능을 수행하고 있고 자식이 이를 상속하게 된다면 <br>
 자식은 해당 기능을 오버라이딩하지 않고 상속받아 사용할 수 있다.<br>
 하지만 자식이 다른 기능으로 변경하기 위해서는 다른 부모를 상속해야 하고<br>
-현재 부모를 상속함으로 수핼할 수 있던 구체적인 기능 의존 관계에 의해 문제가 생기게 된다.<br>
+현재 부모를 상속함으로 수행할 수 있던 구체적인 기능이 의존 관계에 의해 문제가 생기게 된다.<br>
 만약 여러 객체에서 필요로 하는 기능이 있다면 해당 기능의 공통점을 추상화하여 인터페이스로 분리하는 것이  <br>
 해당 인터페이스만 구현하는 것으로 동일한 기능을 구현하면서도 다른 부모를 상속하더라도 기능을 정상적으로 수행할 수 있게 된다.
