--- a/_posts/contents_01_java/2024-10-06-Java_03.md
+++ b/_posts/contents_01_java/2024-10-06-Java_03.md
@@ -38,13 +38,13 @@ categories: blog
 <br>
 그런데 선생님께서 자바 수업을 시작하면서 메모장을 켜셨다. <br>
 
-<img src="/assets/2024-08-09-Java-Class-00.png">
+<img class="image-medium" src="/assets/2024-08-09-Java-Class-00.png">
 <br>
 아직 컴파일은 하지도 않았는데도 온몸에 전율이 흘렀다..
 <br><br>
 
-<div style="border: 2px solid white;">
-    <img src="/assets/2024-08-09-Java-Class-000.png">
+<div class="image-container" style="border: 2px solid white;">
+    <img class="image-medium" src="/assets/2024-08-09-Java-Class-000.png">
 </div>
 울었다.<br>
 <br>
@@ -59,20 +59,20 @@ categories: blog
 <br>
 
 <br>
-<div style="border: 2px solid white;">
-    <img src="/assets/2024-08-09-Java-Class-01.png">
+<div class="image-container" style="border: 2px solid white;">
+    <img class="image-medium" src="/assets/2024-08-09-Java-Class-01.png">
 </div>
 > 너무 신기해서 수업을 들으며 작성한 주석이 수업 내용을 가렸다..
 
 <br><br>
-<div style="border: 2px solid white;">
-    <img src="/assets/2024-08-09-Java-Class-02.png">
+<div class="image-container" style="border: 2px solid white;">
+    <img class="image-medium" src="/assets/2024-08-09-Java-Class-02.png">
 </div>
 > 자바 스크립트에서 배웠던 내용을 어떻게든 떠올려보며 이것 저것 시험해보았다.
 
 <br><br>
-<div style="border: 2px solid white;">
-    <img src="/assets/2024-08-09-Java-Class-03.png">
+<div class="image-container" style="border: 2px solid white;">
+    <img class="image-medium" src="/assets/2024-08-09-Java-Class-03.png">
 </div>
 
 <br>
