--- a/_posts/contents_01_java/2024-10-05-Java_02.md
+++ b/_posts/contents_01_java/2024-10-05-Java_02.md
@@ -53,6 +53,25 @@ JRE는 자바 실행(런타임) 환경으로 자바 어플리케이션을 실행
 2> 자바 소스(.java) -> 컴파일(javac) -> 바이트 코드(.class) <br>
 3> 바이트 코드 -> [JVM]  Class Loader -> Runtime Data Area -> Execution <br>
 > 자바는 사용되지 않는 메모리 자원을 <br> Execution 엔진 영역의 Garbage Collector를 통해 정리한다. <br>
+
+
+JVM이 OS로 부터 부여받은 메모리 공간은 용도에 따라 3가지로 구분된다. <br>
+1. 메서드 영역 <br>
+
+2. 힙 영역 <br>
+
+3. JVM 스택 영역 <br>
+
+<div class="text-center">
+    <img src="/assets/JVM_Memory.png" class="image-responsive"/>
+    <span>
+        <br>
+    </span>
+</div>
+[출처 : blog.naver.com/chlwlstjd10/](https://blog.naver.com/chlwlstjd10/222239136195)
+
+
+
     
 <br>
 <hr>
