이미지 첨부, 출처 표기 등

--- a/_posts/contents_01_java/2024-10-05-Java_02.md
+++ b/_posts/contents_01_java/2024-10-05-Java_02.md
@@ -47,6 +47,7 @@ JRE는 자바 실행(런타임) 환경으로 자바 어플리케이션을 실행
         자바 가상 머신 구조 모식도<br>
     </span>
 </div>
+이미지 출처 : [velog.io/@jungmyeong96](https://velog.io/@jungmyeong96/JAVA%EA%B8%B0%EC%B4%88-JVM%EC%9D%B4%EB%9E%80)
 
 - 자바 프로그램의 실행 과정 <br>
 1> 프로그램 실행 : OS로 부터 메모리 할당 (JVM) <br>
@@ -68,7 +69,7 @@ JVM이 OS로 부터 부여받은 메모리 공간은 용도에 따라 3가지로
         <br>
     </span>
 </div>
-[출처 : blog.naver.com/chlwlstjd10/](https://blog.naver.com/chlwlstjd10/222239136195)
+이미지 출처 : [blog.naver.com/chlwlstjd10/](https://blog.naver.com/chlwlstjd10/222239136195)
 
 
 
