--- a/_posts/contents_01_java/2024-10-08-Java_05.md
+++ b/_posts/contents_01_java/2024-10-08-Java_05.md
@@ -69,9 +69,9 @@ class ElecDevice implements Power, Volume {
 상속의 키워드는 ***extends***로 기능이 확장된다는 **개방 폐쇄의 원칙**을 따른다. <br>
 
 <xmp>
-class TV extends Electronics {};
-class Radio extends Electronics {};
-class Speaker extends Electronics {};
+class TV extends ElecDevice {};
+class Radio extends ElecDevice {};
+class Speaker extends ElecDevice {};
 </xmp>
 
 
