--- a/_posts/contents_01_java/2024-10-07-Java_04.md
+++ b/_posts/contents_01_java/2024-10-07-Java_04.md
@@ -15,7 +15,11 @@ categories: blog
 ## 클래스
 클래스는 자바의 기본이다. <br> 
 **기능을 수행하는 가장 작은 단위**를 객체라고 보았을 때  <br>
-그 객체에 해당하는 요소가 바로 클래스이다. <br>
+그 객체가 수행할 역할, 기능을 명시하고 있는 개념이 바로 클래스이다. <br>
+
+즉, ***클래스는 추상적이고 객체는 실질적***이다. <br>
+실질적이라는 말은 메모리 상에 개별 공간을 차지하고 있다는 것을 의미하고 <br>
+메모리 상에 저장되었다는 것을 강조하기 위해 [인스턴스](#인스턴스)라는 말로 표현하기도 한다.<br>
 <br>
 클래스 내부에 선언된 변수는 데이터가 저장되며 클래스 외부와 구분된다. <br>
 이 때 클래스는 외부로부터 데이터를 보호하는 역할을 하기도 하며  <br>
@@ -89,8 +93,11 @@ int i = 'a'; // 97
 
 
 ## 인스턴스
+: 클래스가 메모리 상의 공간에 저장되면 참조하고 있는 주소를 선언한 변수에 저장하게 되는데, <br>
+이때 참조 주소를 저장하고 있는 객체를 **인스턴스**라고 한다. <br>
 
-- TODO 0813 클래스에서 인스턴스 만들기
+
+- TODO 0813 [클래스](#클래스)에서 인스턴스 만들기
 
 <xmp>
 class ClassDemo1 {
