Restructuring : assets directory

--- a/_posts/_contents_08_Diagram/0000-01-01-UML.md
+++ b/_posts/_contents_08_Diagram/0000-01-01-UML.md
@@ -24,7 +24,7 @@ UML : Unified Modeling Language <br>
 Eclipse: [help] >  [install software] > work with: http://download.eclipse.org/tools/gef/updates/releases/
 
 <div class="text-center">
-    <img src="/assets/Install_GEF_Eclipse.png" class="image-responsive"/>
+    <img src="/assets/image/Install_GEF_Eclipse.png" class="image-responsive"/>
     <span>
         GEF Plugin 설치 (Eclipse)<br>
     </span>
@@ -41,8 +41,8 @@ Eclipse Restart > [New] > [Others] > Amateras
 <br>
 
 <div class="text-center">
-    <img src="/assets/Install_UML_Eclipse_Folder01.png" class="image-responsive"/>
-    <img src="/assets/Install_UML_Eclipse_Folder02.png" class="image-responsive"/>
+    <img src="/assets/image/Install_UML_Eclipse_Folder01.png" class="image-responsive"/>
+    <img src="/assets/image/Install_UML_Eclipse_Folder02.png" class="image-responsive"/>
     <span>
         Amateras UML 플러그인 Eclipse 실행 패키지 폴더 내 dropins에 복사<br>
     </span>
@@ -51,11 +51,11 @@ Eclipse Restart > [New] > [Others] > Amateras
 
 [플러그인 파일] 
 <br> 1. 
-[net.java.amateras.umleditor_1.3.4.jar](/assets/net.java.amateras.umleditor_1.3.4.jar)
+[net.java.amateras.umleditor_1.3.4.jar](/assets/image/net.java.amateras.umleditor_1.3.4.jar)
 <br> 2. 
-[net.java.amateras.umleditor.java_1.3.4.jar](/assets/net.java.amateras.umleditor.java_1.3.4.jar)
+[net.java.amateras.umleditor.java_1.3.4.jar](/assets/image/net.java.amateras.umleditor.java_1.3.4.jar)
 <br> 3. 
-[net.java.amateras.xstream_1.3.4](/assets/net.java.amateras.xstream_1.3.4)
+[net.java.amateras.xstream_1.3.4](/assets/image/net.java.amateras.xstream_1.3.4)
 
 <br>
 
