--- a/_posts/contents_01_java/2024-10-05-Java_02.md
+++ b/_posts/contents_01_java/2024-10-05-Java_02.md
@@ -42,7 +42,7 @@ JRE는 자바 실행(런타임) 환경으로 자바 어플리케이션을 실행
 <br>
 
 <div class="text-center">
-    <img src="/assets/JVM 구성 모식도.png" class="image-responsive"/>
+    <img src="/assets/image/JVM 구성 모식도.png" class="image-responsive"/>
     <span>
         자바 가상 머신 구조 모식도<br>
     </span>
@@ -64,7 +64,7 @@ JVM이 OS로 부터 부여받은 메모리 공간은 용도에 따라 3가지로
 3. JVM 스택 영역 <br>
 
 <div class="text-center">
-    <img src="/assets/JVM_Memory.png" class="image-responsive"/>
+    <img src="/assets/image/JVM_Memory.png" class="image-responsive"/>
     <span>
         <br>
     </span>
