Java_06~10 & Code Theme 적용
Java 06 : 접근 제한자와 패키지
java 07 : 라이브러리와 프레임워크
java 08 : static과 중첩클래스
java 09 : 추상클래스와 인터페이스
java 10 : Thread와 Runnable
Web : sendRedirct와 forward
JavaScript : alert와 dialog
HTML, CSS : Semantic Tag

--- a/_posts/contents_01_java/2024-10-06-Java_03.md
+++ b/_posts/contents_01_java/2024-10-06-Java_03.md
@@ -22,18 +22,19 @@ categories: blog
 
 > ! + Enter
 
-<xmp>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+<pre><code>
+&lt;!DOCTYPE html&gt;
+&lt;html lang="en"&gt;
+&lt;head&gt;
+    &lt;meta charset="UTF-8"&gt;
+    &lt;meta name="viewport" content="width=device-width, initial-scale=1.0"&gt;
+    &lt;title&gt;Document&lt;/title&gt;
+&lt;/head&gt;
+&lt;body&gt;
 
-</body>
-</html>
-</xmp>
+&lt;/body&gt;
+&lt;/html&gt;
+</code></pre>
 
 <br>
 그런데 선생님께서 자바 수업을 시작하면서 메모장을 켜셨다. <br>
