--- a/_posts/contents_01_java/2024-10-07-Java_04.md
+++ b/_posts/contents_01_java/2024-10-07-Java_04.md
@@ -40,7 +40,7 @@ categories: blog
 ### 기본 데이터 타입
 
 메모리 상에 데이터를 직접 저장할 수 있는 타입으로 byte값이 할당된다.<br>
-<xmp>
+<pre><code>
 용도            크기 (byte)     
 ------------------------------------------------------
 정수형            
@@ -55,17 +55,17 @@ categories: blog
         char    2 byte          
 논리형
         boolean 1 byte
-</xmp>
+</code></pre>
 
 > 1 byte = 8 bit => 2^8 개의 숫자를 저장 (-128 ~ 0 ~ +127) <br>
 저장 가능한 byte를 초과할 경우 "incompatible types: possible lossy conversion from int to byte" 오류 발생
-<xmp>
+<pre><code>
 "기본 타입은 한 문자만 저장 가능 _ UNI코드" * Java의 범용성 *           
 cf. C(++)에서는 char는 1byte _ ASCII코드(128개) = 영어만 가능
         char c = 97; // 'a'
 int i = 'a'; // 97
     i -='0'; // 0    이렇게 변환할 수도 있다.  "read()-'0';"으로
-</xmp>
+</code></pre>
 
 <br>
 
@@ -99,7 +99,7 @@ int i = 'a'; // 97
 
 - TODO 0813 [클래스](#클래스)에서 인스턴스 만들기
 
-<xmp>
+<pre><code>
 class ClassDemo1 {
 	int iValue;			// 아직 메모리에 공간이 만들어지지 않아서 사용할 수 없다.
 	double dValue;		// 메모리 상에 iValue와 함께 저장된다. "묶어서 인스턴스라고 한다."
@@ -115,7 +115,7 @@ public class ClassTest1 {
 		int iVal = 50;	// 값을 저장하는 기본 변수 - 메서드 내부에 선언된 (지역)변수
 	}
 }
-</xmp>
+</code></pre>
 
 > ***new 연산자***를 통해서 인스턴스를 생성해야 <br>
 iValue와 dValue 인스턴스가 만들어진다. <br>
