--- a/_posts/contents_01_java/2024-10-08-Java_05.md
+++ b/_posts/contents_01_java/2024-10-08-Java_05.md
@@ -28,7 +28,7 @@ categories: blog
 TV와 Radio, Speaker라는 세 종류의 전자기기가 있을 경우 <br>
 전원 작동과 음향 조절이라는 공통 기능을 수행한다고 하면 <br>
 
-<xmp>
+<pre><code>
 interface Power {
     public void powerOn();
     public void powerOff();
@@ -37,10 +37,10 @@ interface Volume {
     public void volumeUp();
     public void volumeDown();
 }
-</xmp>
+</code></pre>
 처럼 공통 기능을 별도의 객체로 분리할 수 있으며
 
-<xmp>
+<pre><code>
 class ElecDevice implements Power, Volume {
     boolean isPowered = false;
     int volumn = 0;
@@ -59,7 +59,7 @@ class ElecDevice implements Power, Volume {
         volume -= 1;
     }
 }
-</xmp>
+</code></pre>
 과 같이 공통 기능을 수행할 객체를 마련할 수 있다. <br>
 
 
@@ -68,11 +68,11 @@ class ElecDevice implements Power, Volume {
 
 상속의 키워드는 ***extends***로 기능이 확장된다는 **개방 폐쇄의 원칙**을 따른다. <br>
 
-<xmp>
+<pre><code>
 class TV extends ElecDevice {};
 class Radio extends ElecDevice {};
 class Speaker extends ElecDevice {};
-</xmp>
+</code></pre>
 
 
 <br>
@@ -81,3 +81,10 @@ class Speaker extends ElecDevice {};
 
 ## 참조 관계
 객체는 메모리 상에 저장된 참조 주소를 변수에 저장한다. <br>
+
+
+
+상속 관계에서 부모 타입의 객체는 자식의 참조값을 저장할 수 있다. <br>
+이를 자동(묵시적) 형변환 ***Promotion***이라고 한다. <br>
+자식 객체에 부모 타입의 데이터를 저장하기 위해서는 강제로 타입을 변환해야 하는데 <br>
+이를 강제(명시적) 형변환 ***Casting***이라고 한다. <br>
