카테고리 추가

--- a/_posts/contents_01_java/2024-10-08-Java_05.md
+++ b/_posts/contents_01_java/2024-10-08-Java_05.md
@@ -3,6 +3,7 @@ layout: post
 title: "Java_05_상속과 참조관계"
 date: 2024-10-08
 categories: blog
+category: Java
 ---
 
 <br>
@@ -73,6 +74,13 @@ class TV extends ElecDevice {};
 class Radio extends ElecDevice {};
 class Speaker extends ElecDevice {};
 </code></pre>
+
+<br><br>
+<div class="image-container" style="border: 2px solid white;">
+    <img class="image-medium" src="/assets/image/2024-10-14-Java-ClassDiagram_01_ElecDevice.png">
+</div>
+> 클래스간 관계도 (UML)
+
 
 
 <br>
