--- a/_posts/contents_01_java/2024-10-12-Java_09.md
+++ b/_posts/contents_01_java/2024-10-12-Java_09.md
@@ -97,16 +97,23 @@ class InterfaceTest1 implements Inter2, Inter3 {
 
 
 <br>
-<div class="image-container" style="border: 2px solid white;">
+<div class="image-container">
     <img class="image-medium" src="/assets/image/2024-08-21-Java-Interface-01.png">
 </div>
 > 
 
 <br>
-<div class="image-container" style="border: 2px solid white;">
+<div class="image-container">
     <img class="image-medium" src="/assets/image/2024-08-21-Java-Interface-02.png">
 </div>
 > 추상 메서드 오버라이딩
+
+<br>
+<div class="image-container">
+    <img class="image-medium" src="/assets/image/2024-10-12-ClassDiagram_02_Animal_01.png">
+    <!-- <img class="image-medium" src="/assets/image/2024-10-12-ClassDiagram_02_Animal_02.png"> -->
+</div>
+> 클래스 관계도
 
 <br>
 
