테마 오류 수정

--- a/_posts/contents_03_Spring/2024-10-13-Spring_00.md
+++ b/_posts/contents_03_Spring/2024-10-13-Spring_00.md
@@ -18,6 +18,9 @@ JEE를 개발하기 위한 솔루션. <br>
 
 > POJO (Plain Old Java Object) <br>
 평범한 자바 오브젝트 <br>
+상속이나 포함관계가 없는 순수하게 멤버로만 구성된 클래스 <br>
+<br>
+
 EJB (Enterprise JavaBeans) <br>
 빈 객체 <br>
 
@@ -142,69 +145,3 @@ ApplicationContext 는 BeanFactory를 상속한 인터페이스로 Spring Contai
 <hr>
 
 
-aopinit.xml 내 bean태그 를 풀어쓴 것.. <br>
-
-<pre><code>
-    1> target : 핵심로직
-    &lt;bean id="targetClass" class="pack.MessageImpl">
-    ...
-        
-        MessageImpl targetClass = new MessageImpl();
-
-        public MessageImpl() {
-            setName("한국인");
-        }
-
-
-    2> Advice : target에 삽입될 aspect 코드
-    &lt;bean id="loggingAdvice" class="advice.LoggingAdvice"/>
-
-        LoggingAdvice loggingAdvice = new LoggingAdvice();
-
-
-    3> Proxy : 캐시 ...
-    &lt;bean id="proxy" class="org.springframework.aop.framework.ProxyFactoryBean">
-    ...
-
-        Proxy proxy = ProxyFactoryBean.getProxy();
-    
-        public Proxy getProxy() {
-            setTarget(targetClass);
-            setInterceptorNames("hiAdvisor");
-        }
-
-        public void setTarget (TargetClass targetClass) { // org.springframework.aop.framework.AdivosedSupport
-            ...
-        }
-
-        public void setInterceptorNames (String... interceptorNames) {
-            this.interceptorNames = interceptorNames;
-        }
-    
-    4> Advisor : advice와 target을 연결
-    &lt;bean id="hiAdvisor" class="org.springframework.aop.support.DefaultPointcutAdvisor">
-    ...
-        
-        HiAdvisor hiAdvisor = new HiAdvisor()
-
-        public HiAdvisor() {
-            // AOP가 호출
-            setAdvice(loggingAdvice);
-            setPointCut(jdkRegexpMethodPointcut);
-        }
-
-        public void setAdvice(LoggingAdvice loggingAdvice) {
-            this.loggingAdvice = loggingAdvice;
-        }
-
-        public void setPointCut(JdkRegexpMethodPointcut jdkRegexpMethodPointcut) {
-            this.jdkRegexpMethodPointcut = jdkRegexpMethodPointcut;
-        }
-
-        public JdkRegexpMethodPointcut () {
-            setPattern(".*sayHi*."); // AOP가 호출
-        }
-        public void setPattern (Regexp regexp) {
-            ...
-        }
-</code></pre>
