--- a/_posts/contents_03_Spring/2024-10-14-Spring_01.md
+++ b/_posts/contents_03_Spring/2024-10-14-Spring_01.md
@@ -70,54 +70,130 @@ category: Spring
 </table>
 
 <br>
+<hr>
+<br>
+
+
 
 ### 의존성 주입 (DI : Dependency Injection)
-의존성 주입이란 객체 인스턴스의 생성과 메서드의 호출 시기를 개발자가 제어하는 것이 아니라,
-스프링 프레임워크가 제어하도록 제어를 역전시킨 예로
-생성자, setter메서드, 
+의존성 주입이란 외부 컨테이너가 생성한 객체를 주입받아 사용하는 방식. <br>
+결합도를 낮추고 유연성을 확보해준다. <br>
+의존성 주입 방식은 세 가지가 있다. <br>
+- 생성자 주입<br>
+- setter 메서드 주입<br>
+- 필드 객체 선언 주입<br>
+<br>
+<hr>
+<br>
+
+
+> xml 파일 예제
+<pre><code>
+&lt;!-- 1&gt; 핵심 로직 : AOP 입장에서는 "target" --&gt;
+&lt;bean id="targetClass" class="pack.MessageImpl"&gt;
+    &lt;property name="name" value="한국인"/&gt;
+&lt;/bean&gt;
+&lt;!-- 2&gt; Advice(Aspect)를 Target에 weaving (Advice : 실질적으로 동작할 관심사항 코드) --&gt;
+&lt;bean id="loggingAdvice" class="advice.LoggingAdvice"/&gt;
+&lt;!-- 원리를 이해할 것 --&gt;
+
+&lt;!-- 3&gt; Proxy를 통한 간접 접근 (Proxy : 캐시) | ProxyFactoryBean : 프록시 인스턴스 생성 --&gt;
+&lt;bean id="proxy" class="org.springframework.aop.framework.ProxyFactoryBean"&gt;
+    &lt;property name="target"&gt;
+        &lt;ref bean="targetClass"/&gt;
+    &lt;/property&gt;
+    &lt;!-- 인터셉터명 list로 작성 --&gt;
+    &lt;property name="interceptorNames"&gt;
+        &lt;list&gt;
+            &lt;value&gt;hiAdvisor&lt;/value&gt;
+        &lt;/list&gt;
+    &lt;/property&gt;
+&lt;/bean&gt;
+
+&lt;!-- 4&gt; Advisor (Advice + Pointcut) | DefaultPointcutAdvisor : advice와 pointcut을 연결해주는 객체 --&gt;
+&lt;bean id="hiAdvisor" class="org.springframework.aop.support.DefaultPointcutAdvisor"&gt;
+&lt;!-- setter injection --&gt;
+    &lt;!-- Advice --&gt;
+    &lt;property name="advice"&gt;
+        &lt;ref bean="loggingAdvice"/&gt;
+    &lt;/property&gt;
+    &lt;!-- Pointcut --&gt;
+    &lt;property name="pointcut"&gt;
+        &lt;bean class="org.springframework.aop.support.JdkRegexpMethodPointcut"&gt;
+            &lt;!-- 정규 표현식을 사용 --&gt;
+            &lt;property name="pattern"&gt;
+                &lt;value&gt;.*sayHi*.&lt;/value&gt;&lt;!-- 현재 패키지 내에 sayHi라는 문자열을 포함한 메서드를 setPattern(메서드)에 전달 --&gt;
+            &lt;/property&gt;
+        &lt;/bean&gt;
+    &lt;/property&gt;
+&lt;/bean&gt;
+</code></pre>
 
 
 
+> 생성자와 setter 메서드를 풀어써본 것
+<pre><code>
+    1> target : 핵심로직
+    &lt;bean id="targetClass" class="pack.MessageImpl">
+    ...
+        
+        MessageImpl targetClass = new MessageImpl();
+
+        public MessageImpl() {
+            setName("한국인");
+        }
 
 
+    2> Advice : target에 삽입될 aspect 코드
+    &lt;bean id="loggingAdvice" class="advice.LoggingAdvice"/>
+
+        LoggingAdvice loggingAdvice = new LoggingAdvice();
 
 
-<table>
-    <thead>
-        <tr>
-            <th></th><th></th><th></th>
-        </tr>
-        <tr>
-            <th></th>
-            <th></th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-    </tbody>
-    <thead>
-        <tr>
-            <th></th><th></th><th></th>
-        </tr>
-    </thead>
-</table>
+    3> Proxy : 캐시 ...
+    &lt;bean id="proxy" class="org.springframework.aop.framework.ProxyFactoryBean">
+    ...
+
+        Proxy proxy = ProxyFactoryBean.getProxy();
+    
+        public Proxy getProxy() {
+            setTarget(targetClass);
+            setInterceptorNames("hiAdvisor");
+        }
+
+        public void setTarget (TargetClass targetClass) { // org.springframework.aop.framework.AdivosedSupport
+            ...
+        }
+
+        public void setInterceptorNames (String... interceptorNames) {
+            this.interceptorNames = interceptorNames;
+        }
+    
+    4> Advisor : advice와 target을 연결
+    &lt;bean id="hiAdvisor" class="org.springframework.aop.support.DefaultPointcutAdvisor">
+    ...
+        
+        HiAdvisor hiAdvisor = new HiAdvisor()
+
+        public HiAdvisor() {
+            // AOP가 호출
+            setAdvice(loggingAdvice);
+            setPointCut(jdkRegexpMethodPointcut);
+        }
+
+        public void setAdvice(LoggingAdvice loggingAdvice) {
+            this.loggingAdvice = loggingAdvice;
+        }
+
+        public void setPointCut(JdkRegexpMethodPointcut jdkRegexpMethodPointcut) {
+            this.jdkRegexpMethodPointcut = jdkRegexpMethodPointcut;
+        }
+
+        public JdkRegexpMethodPointcut () {
+            setPattern(".*sayHi*."); // AOP가 호출
+        }
+        public void setPattern (Regexp regexp) {
+            ...
+        }
+</code></pre>
+
