--- a/_posts/contents_03_Spring/2024-10-15-Spring_02.md
+++ b/_posts/contents_03_Spring/2024-10-15-Spring_02.md
@@ -11,18 +11,9 @@ category: Spring
 ---
 
 ### Stereotype
-: 스프링 컨테이너가 관리 컴포넌트로 식별할 수 있도록 작성하는 표식 개념. 
+: 스프링 컨테이너가 관리 컴포넌트로 식별할 수 있도록 작성하는 표식 개념. <br>
 
-
-@Component : DI를 위한 기본 Annotation
-
-서브 스테레오타입
-@Service    : 비즈니스 로직을 수행
-@Controller : 프레젠테이션 로직을 수행 (MVC 컨트롤러 역할 : 웹 컨텍스트에서 사용)
-@Repository : 데이터 접근 객체의 역할을 수행 (Persistance, DAO)
-...
-
-
+@Component : DI를 위한 기본 Annotation <br>
 
 <table>
     <thead>
@@ -65,3 +56,4 @@ category: Spring
 </table>
 
 
+### 
