--- a/_posts/contents_03_Spring/2024-10-16-Spring_03.md
+++ b/_posts/contents_03_Spring/2024-10-16-Spring_03.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Spring_03_관점 지향 프로그래밍"
-date: 2024-10-15
+date: 2024-10-16
 categories: blog
 category: Spring
 ---
@@ -28,9 +28,24 @@ AOP를 적용하면 공통기능과 비즈니스 기능을 따로 개발한 후 
 <hr>
 <br>
 
-- Spring AOP 용어
+- ### AOP 사용 이유 
+횡단 관심사(Cross-Cutting Concern)를 깔끔하게 처리하기 위함. <br>
+핵심 로직과 부가 기능을 분리하여 기능을 재사용할 수 있도록 한다. <br>
 
-<pre><code>
+    
+![alt text](/assets/image/2024-10-16-CrossCut.png)
+> 횡단 관심사 모식도 <br>
+이미지 출처 : [https://velog.velcdn.com](https://velog.io/@semi-cloud/%EC%8A%A4%ED%94%84%EB%A7%81-%ED%95%B5%EC%8B%AC-%EA%B3%A0%EA%B8%89%ED%8E%B8-7-Spring-AOP)
+
+<br>
+<hr>
+<br>
+
+
+
+- ### Spring AOP 용어
+
+<pre><code style="font-size:16px">
 ● Joinpoint
     : ‘클래스의 인스턴스 생성 시점’, ‘메소드 호출 시점’ 및 ‘예외 발생 시점’ 과 같이 
       어플리케이션을 실행할 때 "특정 작업이 시작되는 시점"을 의미.
@@ -56,31 +71,71 @@ AOP를 적용하면 공통기능과 비즈니스 기능을 따로 개발한 후 
      삽입될 경우 "Advice"
 </code></pre>
 
+<br>
 
-- cf. ProxyFactoryBean
-<pre><code>
-Spring은 일관된 방법으로 Proxy를 만들 수 있게 도와주는 추상레이어를 제공한다. 
-여기서 생성된 Proxy는 Spring의 Bean으로 등록되어야 한다.
-Spring은 Proxy 오브젝트를 생성해주는 기술을 추상화한 Factory Bean을 제공한다. 
-그 Factory Bean이 바로 ProxyFactoryBean이다. 
+- ### 단계별 AOP 용어
 
-ProxyFactoryBean은 Proxy를 생성해서 Bean 오브젝트로 등록하게 해주는 Factory Bean이다. 
-ProxyFactoryBean은 순수하게 Proxy를 생성하는 역할만 담당한다. 
+![](/assets/image/2024-10-16-Spring_AOP_용어.png)
 
-ProxyFactoryBean이 생성하는 Proxy에서 부가기능을 사용해야 한다면 
-MethodInterceptor interface를 구현해서 만들면 된다. 
-MethodInterceptor는 InvocationHandler와 비슷하지만 한가지 다른 점이 있다.
+<br>
 
-바로 InvocationHandler의 invoke() 메소드는 타깃 오브젝트에 대한 정보를 제공해주지 않기 때문에 
-InvocationHandler를 구현한 클래스는 타깃에 대한 정보를 알고 있어야 했다.
+- ### AOP의 동작 순서
 
-반면에 MethodInterceptor의 invoke() 메소드는 
-ProxyFactoryBean으로부터 타깃 오브젝트에 대한 정보도 함께 제공을 받는다. 
+![](/assets/image/2024-10-15-Spring_MVC_Container2.png)
 
-이 덕분에 InvocationHandler를 구현한 클래스는 타깃 오브젝트가 있어야 만들어 질 수 있었지만, 
-MethodInterceptor를 구현한 클래스는 타깃 오브젝트가 없어도 만들어 질 수 있다.
-    => MethodInterceptor를 구현한 오브젝트는 타깃이 다른 여러 Proxy에서 함께 사용할 수 있고, 
-        Singleton Bean으로 등록 가능하다.
-</code></pre>
+
+
+
+<br>
+<hr>
+<br>
+
+- ### Proxy <br>
+
+***Proxy는 유저 클라이언트와 서버 사이에 중개장비***로서 <br>
+***캐시 기법을 사용하여 서버로 가는 트래픽을 감소***시킨다. <br>
+
+서버에 몰리는 유저가 많을수록 서버의 트래픽이 증가하여 <br>
+접속 시간이 지연되거나 서버 자체가 다운되는 경우가 있다. <br>
+
+서버가 Proxy를 가지게 되면 클라이언트는 Proxy에 접속하고 <br>
+Proxy가 서버에 한 번 접속하여 그 내용을 읽어들여 저장하고 <br>
+클라이언트에 제공하게 되므로 서버에 가는 트래픽이 감소하게 된다. <br>
+***서버는 Proxy를 많이 둘수록 원활하게 동작***한다. <br>
+
+클라이언트가 Proxy를 이용하여 서버에 접속하게 되면 서버에는 클라이언트에 대한 정보가 기록된다. <br>
+하지만 ***Anonymous Proxy를 이용하면 Anonymous Proxy의 주소가 기록되므로 클라이언트의 정보가 기록되지 않는다.***
+> 출처 : [https://cafe.daum.net/flowlife/](https://cafe.daum.net/flowlife/HrhB/38)
+
+<br>
+<hr>
+<br>
+
+- ### ProxyFactoryBean <br>
+
+Spring은 일관된 방법으로 Proxy를 만들 수 있게 도와주는 **추상레이어**를 제공한다. <br>
+여기서 생성된 **Proxy는 Spring의 Bean으로 등록**되어야 한다. <br>
+Spring은 **Proxy 오브젝트를 생성**해주는 기술을 추상화한 **Factory Bean**을 제공한다. <br>
+그 Factory Bean이 바로 **ProxyFactoryBean**이다. <br>
+
+ProxyFactoryBean은 Proxy를 생성해서 Bean 오브젝트로 등록하게 해주는 Factory Bean이다. <br>
+ProxyFactoryBean은 순수하게 Proxy를 생성하는 역할만 담당한다. <br>
+
+ProxyFactoryBean이 생성하는 Proxy에서 부가기능을 사용해야 한다면 <br>
+**MethodInterceptor** interface를 구현해서 만들면 된다. <br>
+MethodInterceptor는 ***InvocationHandler와 비슷***하지만 한가지 다른 점이 있다. <br>
+
+>
+바로 InvocationHandler의 invoke() 메소드는 타깃 오브젝트에 대한 정보를 제공해주지 않기 때문에 <br>
+InvocationHandler를 구현한 클래스는 타깃에 대한 정보를 알고 있어야 했다. <br>
+>
+반면에 MethodInterceptor의 invoke() 메소드는 <br>
+ProxyFactoryBean으로부터 타깃 오브젝트에 대한 정보도 함께 제공을 받는다. <br>
+
+이 덕분에 InvocationHandler를 구현한 클래스는 타깃 오브젝트가 있어야 만들어 질 수 있었지만, <br>
+MethodInterceptor를 구현한 클래스는 타깃 오브젝트가 없어도 만들어 질 수 있다. <br>
+
+따라서 **MethodInterceptor를 구현한 오브젝트는 타깃이 다른 여러 Proxy에서 함께 사용**할 수 있고, <br>
+**Singleton Bean으로 등록 가능**하다. <br>
 > 출처 : [https://cafe.daum.net/flowlife/](https://cafe.daum.net/flowlife/HrhB/38)
 
