날짜, 카테고리 수정

--- a/_posts/_contents_08_Diagram/2024-10-10-UML.md
+++ b/_posts/_contents_08_Diagram/2024-10-10-UML.md
@@ -1,8 +1,9 @@
 ---
 layout: post
 title: "UML_Eclipse 설치 [Mac]"
-date: 0000-01-01
+date: 2024-10-10
 categories: blog
+category: Diagram
 ---
 
 <br>
