--- a/_posts/contents_03_Spring/2024-10-13-Spring_01.md
+++ b/_posts/contents_03_Spring/2024-10-13-Spring_01.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Spring_00_스프링 프레임워크"
+title: "Spring_01_스프링 프레임워크"
 date: 2024-10-13
 categories: blog
 category: Spring
@@ -29,16 +29,32 @@ EJB (Enterprise JavaBeans) <br>
 
 - 동작 순서
 
-<div class="image-container">
-    <img class="image-medium" src="/assets/image/2024-10-15-Spring_MVC_Container1.png">
-    <img class="image-medium" src="/assets/image/2024-10-15-Spring_MVC_Container2.png">
-</div>
-> 
+![](/assets/image/2024-10-15-Spring_MVC_Container.001.png) | ![](/assets/image/2024-10-15-Spring_MVC_Container.003.png)
 
+<details>
+<summary>View & ViewResolver 방식 모식도</summary>
+<img src="/assets/image/2024-10-15-Spring_MVC_Container.004.png" />
 
+<pre><code>
+- DispatcherServlet 
+    = “Front Controller”
+    : 클라이언트의 모든 요청을 전달받는다. 
+- HandlerMapping 
+    : 요청에 맞는 컨트롤러 검색 (cf. 핸들러 = 컨트롤러 | 매핑 = 검색) 
+    → “return Controller”
+- Controller 
+    : Model에 Business Logic 요청 
+    → "return ModelAndView" : 모델에서 처리한 결과와 뷰리졸버에서 처리할 정보를 담아서 반환
+- ViewResolver 
+    = “application.properties”
+    : 컨트롤러로부터 "View 객체"를 받아서 폴더 경로 및 확장자를 작성한 후 반환
+    → "return View”
+</code></pre>
+</details>
 
-
-
+<br>
+<hr>
+<br>
 
 ### Maven Project (Eclipse) <br>
 
@@ -61,11 +77,12 @@ EJB (Enterprise JavaBeans) <br>
 </code></pre>
 
 
-<br>
+<details>
+<summary>pom.xml 설정 이미지</summary>
 <div class="image-container">
     <img class="image-medium" src="/assets/image/2024-10-15-Spring-maven.png">
 </div>
-> 
+</details>
 
 
 2> interface 생성
