--- a/_posts/contents_03_Spring/2024-10-14-Spring_02.md
+++ b/_posts/contents_03_Spring/2024-10-14-Spring_02.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Spring_01_제어 역전과 의존성 주입"
+title: "Spring_02_제어 역전과 의존성 주입"
 date: 2024-10-14
 categories: blog
 category: Spring
@@ -16,10 +16,9 @@ category: Spring
 > 즉, 개발자가 제어의 흐름을 직접 통제하는 기존의 방식이 아니라 <br>
 외부의 프레임워크나 라이브러리가 제어의 흐름을 대신 통제하는 것. <br>
 
-<br>
-<div class="image-container">
-    <img class="image-medium" src="/assets/image/2024-10-13-Framework_Library.png">
-</div>
+
+![](/assets/image/2024-10-13-Framework_Library.png) | ![](/assets/image/spacer.png)
+
 > IoC (제어 역전) 모식도 <br>
 
 <br>
