--- a/_posts/contents_03_Spring/2024-10-17-Spring_05.md
+++ b/_posts/contents_03_Spring/2024-10-17-Spring_05.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Spring_04_DB Connection"
+title: "Spring_05_DB Connection"
 date: 2024-10-17
 categories: blog
 category: Spring
@@ -13,11 +13,14 @@ category: Spring
 
 - ## 스프링 프레임워크의 DB 연결 방법 4가지
 <pre><code>
-1. 직접 PreparedStatement에 쿼리문을 전달하는 방법.
-2. JdbcDaoSupport 클래스를 이용한 방법.
-  : jdbcTemplate과 RowMapper를 이용.
-3. MyBatis를 이용한 방법.
-4. JPA를 이용한 방법.
+1. 직접 PreparedStatement에 쿼리문을 전달.
+2. JdbcDaoSupport 클래스 이용.
+  : JdbcTemplate과 RowMapper를 이용.
+3. MyBatis를 이용.
+  : DataMapper.xml
+    SqlMapperInterface (@Select)
+4. JPA를 이용.
+  : @Entity
 </code></pre>
 
 
@@ -30,7 +33,7 @@ category: Spring
 
 <br>
 결국 DB와 연결은 DAO가 담당하기 때문에 <br>
-@Repository 스테레오 타입의 객체가 핵심이다. <br>
+@Repository 스테레오 타입의 객체가 중추 역할을 수행한다. <br>
 <br>
 
 - ### 1. PreparedStatement 사용
@@ -92,19 +95,14 @@ jdbcTemplate 객체의 query()를 호출하여 쿼리문과 매퍼를 인자로 
 <strong>DriverManagerDataSource</strong> 상속<br>
 
 <pre><code>
-package pack;
-
-import org.springframework.jdbc.datasource.DriverManagerDataSource;
-import org.springframework.stereotype.Component;
-
 @Component
 public class DataSource extends DriverManagerDataSource {
 	
 	public DataSource () {
 		setDriverClassName("org.mariadb.jdbc.Driver");
-		setUrl("jdbc:mariadb://svc.sel4.cloudtype.app:32217/test");
+		setUrl("jdbc:mariadb://svc.sel4.cloudtype.app:12345/test");
 		setUsername("root");
-		setPassword("1820");
+		setPassword("1111");
 	}
 }
 </code></pre>
@@ -114,27 +112,9 @@ public class DataSource extends DriverManagerDataSource {
 
 - DTO
 <pre><code>
-package pack;
-
-import lombok.Data;
-
 @Data
 public class Dto {
 	private String number, data;
-}
-</code></pre>
-<br>
-
-
-
-- DAO interface
-<pre><code>
-package pack;
-
-import java.util.List;
-
-public interface DaoInter {
-	List&lt;Dto&gt; selectList();
 }
 </code></pre>
 <br>
@@ -156,15 +136,6 @@ JdbcDaoSupport 클래스의 setDataSource()를 호출할 수 없다.<br><br>
 ***** <br>
 RowMapper 인터페이스 내 mapRow() 오버라이딩 <br>
 <pre><code>
-package pack;
-
-import java.util.List;
-
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.jdbc.core.RowMapper;
-import org.springframework.jdbc.core.support.JdbcDaoSupport;
-import org.springframework.stereotype.Repository;
-
 @Repository
 public class DaoImpl extends JdbcDaoSupport implements DaoInter {
 	
@@ -187,29 +158,10 @@ public class DaoImpl extends JdbcDaoSupport implements DaoInter {
 <br>
 
 
-
-
-- Business Logic interface
-<pre><code>
-package pack;
-
-public interface BusinessInter {
-	void showData();
-}
-</code></pre>
-<br>
-
-
-
 - Business Logic implement 
 > 핵심 로직 <br>
 @Service <br>
 <pre><code>
-package pack;
-
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Service;
-
 @Service
 public class BusinessImpl implements BusinessInter {
 	
@@ -234,15 +186,6 @@ public class BusinessImpl implements BusinessInter {
 @Around("execution(표현식)") : JoinPoint 검색 <br>
 ProceedingJoinPoint.proceed() -> 핵심 로직 실행 메서드 <br>
 <pre><code>
-package pack;
-
-import java.util.Scanner;
-
-import org.aspectj.lang.ProceedingJoinPoint;
-import org.aspectj.lang.annotation.Around;
-import org.aspectj.lang.annotation.Aspect;
-import org.springframework.stereotype.Component;
-
 @Aspect
 @Component
 public class Advice {
@@ -253,7 +196,6 @@ public class Advice {
 			System.out.println("잘못된 입력입니다.");
 			return null;
 		}
-		
 		return joinPoint.proceed();
 	}
 	
@@ -283,13 +225,6 @@ public class Advice {
 @ComponentScan : 패키지 검색 <br>
 @EnableAspectJAutoProxy : 부가 기능(Aspect)을 검색하여 Advice를 삽입. <br>
 <pre><code>
-package pack;
-
-import org.springframework.context.annotation.AnnotationConfigApplicationContext;
-import org.springframework.context.annotation.ComponentScan;
-import org.springframework.context.annotation.Configuration;
-import org.springframework.context.annotation.EnableAspectJAutoProxy;
-
 @Configuration
 @ComponentScan(basePackages = "pack")
 @EnableAspectJAutoProxy(proxyTargetClass = true)
@@ -309,27 +244,20 @@ public class Main {
 
 --- 
 
-- #### 오류 처리
-
+#### ❌ 오류 : 'dataSource' or 'jdbcTemplate' is required
+<details>
+<summary>DB 연결 오류</summary>
 <pre><code>
-- 발생 오류 <br>
-	['dataSource' or 'jdbcTemplate' is required]
-
-
-- 문제 <br>
-	DB 연결 오류 <br>
-
-
-- 해결 <br>
-1> DataSource 확인 <br>
-	DriverManagerDataSource 상속 여부 <br>
-	-> 생성자 호출 시 부모의 setDriverClassName(), setUrl(), setUsername(), setPassword() 호출<br>
-	@Component 어노테이션 작성 여부 <br><br>
-2> @Repository 확인 <br>
-	JdbcDaoSupport 상속 여부 <br>
-	-> 생성자 호출 시 부모의 setDataSource() 호출 <br>
-	-> 쿼리문 실행 시 getJdbcTemplate() query() 호출 <br>
+1> DataSource 확인 
+	DriverManagerDataSource 상속 여부 
+	-> 생성자 호출 시 부모의 setDriverClassName(), setUrl(), setUsername(), setPassword() 호출
+	@Component 어노테이션 작성 여부
+2> @Repository 확인 
+	JdbcDaoSupport 상속 여부 
+	-> 생성자 호출 시 부모의 setDataSource() 호출 
+	-> 쿼리문 실행 시 getJdbcTemplate() query() 호출 
 </code></pre>
+</details>
 
 <br>
 <hr>
@@ -423,21 +351,11 @@ public interface SqlMapperInter {
 
 
 - ### 4. JPA
-> 실제 테이블에 매핑할 Entity 객체를 이용 <br>
+> Entity 객체 : DB 테이블에 매핑할 클래스 <br>
 persistance.xml에 DB연결 정보 등 저장 <br>
 <strong>@Entity</strong> Annotation 활용 <br>
 
 <pre><code>
-package pack.model;
-
-import javax.persistence.Column;
-import javax.persistence.Entity;
-import javax.persistence.Id;
-import javax.persistence.Table;
-
-import lombok.Getter;
-import lombok.Setter;
-
 /**
  * *** JPA는 낙타 표기법으로 이름을 작성한 경우 언더스코어 네이밍 컨벤션으로 자동 변환한다. (스네이크 표기법) ***
  *  MemEntity -> mem_entity
@@ -445,8 +363,6 @@ import lombok.Setter;
  *  myName -> my_name
  * @Table 어노테이션으로 name 속성을 부여한다.
  */
-@Getter
-@Setter
 @Entity // 실제 테이블과 매핑되는 클래스
 @Table(name="mem") 
 public class MemEntity { 
@@ -469,8 +385,112 @@ public class MemEntity {
         this.addr = addr;
     }
 }
-// 원래는 DTO와 Entity는 구분해서 사용해야 한다.
 </code></pre>
+
+<hr>
+
+- ### 테이블을 조인하는 경우 <br>
+@JoinColumn(name="필드명", referencedColumnName="참조 테이블 필드명") <br>
+<br>
+JPQL 작성 시 Entity(클래스)를 기준으로 작성하기 때문에 <br>
+필드명과 클래스명, 참조할 변수명 또한 자바의 문법에 따라 대소문자를 구분하여 작성해야 한다. <br>
+<br>
+JPQL : "SELECT e.empno, e.ename, d.dname, e.job FROM Emp e JOIN e.dept d" <br>
+
+
+> @Entity : Dept, Emp <br>
+
+<pre><code>
+@Entity
+@Table(name = "DEPT")
+public class Dept {
+    /**
+     * JOIN
+     * @See model.Emp
+     */
+    @Id
+    @Column(name = "DEPTNO")
+    private int deptno;
+    private String dname;
+}
+</code></pre>
+
+<pre><code>
+@Entity
+@Table(name = "EMP")
+public class Emp {
+    @Id // PK
+    @Column(name = "EMPNO")
+    private int empno;
+    
+    private String ename, job;
+
+    /**
+     * JOIN 하는 경우 참조할 Entity를 멤버 변수로 선언.
+     * @ManyToOne 테이블간 관계(1:1 vs 1:n)
+     * @JoinColumn 참조할 테이블의 컬럼(필드)
+     * @param name 현재 테이블 내 변수명
+     * @param referencedColumnName 참조할 테이블 내 변수명
+     * @See model.Dept
+     */
+    @ManyToOne
+    @JoinColumn(name = "deptno", referencedColumnName="deptno")
+    private Dept dept;
+}
+</code></pre>
+
+
+> @Repository : DAO _ JPQL 전달 <br>
+
+<pre><code>
+/** 
+ * JPQL은 엔티티(클래스)를 기준으로 쿼리문을 작성한다. 
+ * 조인할 때에도 멤버변수로 선언한 변수(dept)를 기준으로 조인한다.
+ * @JoinColumn(name = "deptno", referencedColumnName="deptno")
+ */
+String jpql = "SELECT e.empno, e.ename, e.job, d.dname FROM Emp e JOIN e.dept d";
+/**
+ * 조회한 레코드를 배열에 담는다. 
+ * 각 레코드에는 필드들이 배열로 담겨있다.
+ * 문자열과 정수형이 모두 담기기 때문에 Object로 저장한다.
+ */ 
+TypedQuery<Object[]> query = em.createQuery(jpql, Object[].class);
+list = query.getResultList();
+</code></pre>
+
+> @Service : 비즈니스 로직 수행 <br>
+Repository 인스턴스를 치환(저장) 후 다형성을 이용한 메서드 호출. <br>
+<pre><code>
+@Autowired
+private DataInter dataInter;
+@Override
+public void showData() {
+    /* 데이터 타입의 오류를 확인하지 않겠다는 주석 */
+    @SuppressWarnings("unchecked")
+    List<Object[]> list = dataInter.getList();
+    
+    /* Logger 한번 써보기.. */
+    logger.info("empno ename job dname");
+    
+    list.forEach(result -> {
+        logger.info(result[0] + " " 
+                  + result[1] + " " 
+                  + result[2] + " " 
+                  + result[3]);
+    });
+}
+</code></pre>
+
+> JQPL 작성 시 엔티티 간 참조 관계
+![](/assets/image/2024-10-19-JPA_JOIN_JPQL.png)
+<br>
+
+
+
+> 클래스와 Entity(테이블)의 관계에 대한 다이어그램...
+
+![ ](/assets/image/2024-10-19-JPA_JOIN_UML.png) | ![](/assets/image/spacer.png)
+
 
 
 <br>
